--- a/wp-content/plugins/cforms2/styling/custom_wide_open_nb_blue.css
+++ b/wp-content/plugins/cforms2/styling/custom_wide_open_nb_blue.css
@@ -229,18 +229,21 @@ p.cf-sb {
 .cform input.backbutton,
 .cform input.resetbutton,
 .cform input.sendbutton	{ 
-	color:#74aecd;
+	color:#000066;
 	width:150px;
 	padding:5px; 
 	margin: 0px 18px 4px 0pt;
 	font-size:0.8em;
-	background:url(../images/button-bg-blue.gif) repeat-x; 
-	border:1px solid #adadad!important;
-	border-left-color:#ececec!important; 
-	border-top-color:#ececec!important;
+	background:#c5daed!important;
+	border:1px solid #f0f0f0!important;
+/* 	border-left-color:#ececec!important;  */
+/* 	border-top-color:#ececec!important; */
 }
+.cform input.backbutton:hover,
+.cform input.resetbutton:hover,
 .cform input.sendbutton:hover { 
-	color:#b0d1e3;
+	background:#326CA0; 
+	color:white;
 }
 .cform input.resetbutton {
 	width: auto;
@@ -329,7 +332,7 @@ img.captcha	{
 }
 
 .captcha-reset {
-	vertical-align:text-bottom;
+/* 	vertical-align:text-bottom; */
 	color:#BEDFE4;
 	margin:0 0 10px 3px;
 	width:21px;
